Fix 4: Levelled post slider cards and enforced uniform image cropping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -334,7 +334,7 @@ header ul li a:hover {
 .content .main-content .post .post-image {
   width: 50%;
   height: 200px;
-  float: none;
+  float: left;
 }
 
 .content .main-content .post .post-preview {
@@ -807,7 +807,7 @@ header ul li a:hover {
   }
 
   .content .main-content .post .post-image {
-    width: 100%;
+    width: 80%;
     height: 200px;
   }
 
